# relay

./: .env.example  .gitignore  GUARDRAILS.md  LICENSE  README.md  SETUP.md  benchmark-relay.py  compare-relay-vs-litellm-with-guardrails.py  compare-relay-vs-litellm.py  config-open.yaml  config-simple.yaml  config-with-guardrails.yaml  config.yaml  pyproject.toml  start-relay.py  start-relay.sh  start_relay.sh  test_mock_votal_response.py  test_relay_guardrails.py  test_streaming_guardrail.py
bench/: README.md  bench.py  report.py
tests/: test_server.py  test_tracker.py  test_unillm.py
unillm/: __init__.py  cli.py  config.py  fallback.py  guardrails_base.py  guardrails_manager.py  handlers.py  handlers_optimized.py  providers.py  retry.py  server.py  server_fast.py  tracker.py  votal_guardrail.py  votal_guardrail_relay.py
