[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-llm"
version = "0.1.0"
description = "Minimal, secure, supply-chain-safe LLM proxy — LiteLLM drop-in replacement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27.0,<1.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx[socks]",
]
performance = [
    "httptools>=0.6.0",      # Fast HTTP parsing
    "uvloop>=0.19.0",        # High-performance event loop (Unix only)
    "httpx[http2]>=0.27.0",  # HTTP/2 support for connection pooling
]

[project.scripts]
relay = "unillm.cli:main"

[project.urls]
Repository = "https://github.com/sundi133/relay"

[tool.hatch.build.targets.wheel]
packages = ["unillm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
